# CppToy

./: .gitignore  CMakeLists.txt  README.md  abc.c  abc.cpp  compile_commands.json
scripts/: build.sh
src/: CMakeLists.txt
src/multiply/: CMakeLists.txt  ErrorHandle.cpp  multiply.cpp
src/multiply/include/multiply/: multiply.h
tests/: CMakeLists.txt  multiply_test.cpp
